# rusty-chess

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: bitboards.rs  board.rs  castle.rs  lib.rs  lookup.rs  magics.rs  main.rs  masks.rs  movement.rs  piece.rs  position.rs  search.rs  transposition.rs
