[package]
name = "chess-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitvec = "1.0.1"
dialoguer = "0.11.0"
lazy_static = "1.5.0"
rand = "0.8.5"
ratatui = "0.29.0"
thiserror = "1.0.65"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
